# pytask-julia

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  Manifest.toml  README.md  README.rst  codecov.yml  environment.yml  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yml  publish-to-pypi.yml
src/pytask_julia/: __init__.py  collect.py  config.py  execute.py  parametrize.py  plugin.py  serialization.py  shared.py
tests/: conftest.py  test_collect.py  test_config.py  test_execute.py  test_normal_execution_w_plugin.py  test_parallel.py  test_parametrize.py  test_shared.py
