[project]
name = "pytask_julia"
description = "A Pytask plugin for Julia"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10"
dependencies = ["click", "pluggy>=1.0.0", "pytask>=0.4.5"]
dynamic = ["version"]

[[project.authors]]
name = "Tobias Raabe"
email = "raabe@posteo.de"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/pytask-dev/pytask-julia"
Changelog = "https://github.com/pytask-dev/pytask-julia/blob/main/CHANGES.md"
Documentation = "https://github.com/pytask-dev/pytask-julia"
Github = "https://github.com/pytask-dev/pytask-julia"
Tracker = "https://github.com/pytask-dev/pytask-julia/issues"

[project.entry-points.pytask]
pytask_julia = "pytask_julia.plugin"

[project.optional-dependencies]
test = ["pytask-parallel", "pytest", "pytest-cov", "pytest-xdist", "pyyaml"]
typing = ["pyyaml", "ty>=0.0.7"]

[tool.rye]
managed = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/pytask_julia/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
exclude = ["tests"]
only-packages = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-ignore = [
    "ANN401", # flake8-annotate typing.Any
    "COM812", # Comply with ruff-format.
    "ISC001", # Comply with ruff-format.
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "S101"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ty.rules]
unused-ignore-comment = "error"

[tool.ty.terminal]
error-on-warning = true

[[tool.ty.overrides]]
include = ["src/**/_version.py"]

[tool.ty.overrides.rules]
invalid-type-form = "ignore"

[[tool.ty.overrides]]
include = ["src/**/__init__.py"]

[tool.ty.overrides.rules]
unused-ignore-comment = "ignore"


[tool.pytest.ini_options]
testpaths = ["src", "tests"]
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = [".idea"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
pytask_julia = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default", features = ["test", "typing"]}
test = { features = ["test"], solve-group = "default" }
typing = { features = ["test", "typing"], solve-group = "default" }
py310 = { features = ["py310", "test"]}
py311 = { features = ["py311", "test"]}
py312 = { features = ["py312", "test"]}
py313 = { features = ["py313", "test"]}
py314 = { features = ["py314", "test"]}

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.feature.test.target.linux-64.dependencies]
julia = ">=1.0.0"

[tool.pixi.feature.test.target.osx-64.dependencies]
julia = ">=1.0.0"

[tool.pixi.feature.test.tasks]
setup-julia = "julia --project=. --eval 'import Pkg; Pkg.instantiate()'"
test = { cmd = "pytest --cov src --cov tests", depends-on = ["setup-julia"] }

[tool.pixi.feature.typing.dependencies]
ty = ">=0.0.7"

[tool.pixi.feature.typing.tasks]
typing = "ty check --python .pixi/envs/typing src/ tests/"
