[project]
name = "pytask_julia"
description = "A Pytask plugin for Julia"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10"
dependencies = ["click", "pluggy>=1.0.0", "pytask>=0.4.5"]
dynamic = ["version"]

[[project.authors]]
name = "Tobias Raabe"
email = "raabe@posteo.de"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/pytask-dev/pytask-julia"
Changelog = "https://github.com/pytask-dev/pytask-julia/blob/main/CHANGES.md"
Documentation = "https://github.com/pytask-dev/pytask-julia"
Github = "https://github.com/pytask-dev/pytask-julia"
Tracker = "https://github.com/pytask-dev/pytask-julia/issues"

[project.entry-points.pytask]
pytask_julia = "pytask_julia.plugin"

[dependency-groups]
test = ["pytask-parallel", "pytest", "pytest-cov", "pytest-xdist", "pyyaml"]
typing = ["pyyaml", "ty>=0.0.8"]

[tool.rye]
managed = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/pytask_julia/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
exclude = ["tests"]
only-packages = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-ignore = [
    "ANN401", # flake8-annotate typing.Any
    "COM812", # Comply with ruff-format.
    "ISC001", # Comply with ruff-format.
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "S101"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ty.rules]
unused-ignore-comment = "error"

[tool.ty.terminal]
error-on-warning = true

[[tool.ty.overrides]]
include = ["src/**/_version.py"]

[tool.ty.overrides.rules]
invalid-type-form = "ignore"

[[tool.ty.overrides]]
include = ["src/**/__init__.py"]

[tool.ty.overrides.rules]
unused-ignore-comment = "ignore"


[tool.pytest.ini_options]
testpaths = ["src", "tests"]
markers = [
]
norecursedirs = [".idea"]
